--- a/public/styles.css
+++ b/public/styles.css
@@ -69,6 +69,7 @@
 img, video{
   max-width: 100%;
   height: auto;
+  display: block;
 }
 
 .catalog-desc{
